--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'Automatically merge dependabot PRs'
 author: 'Jack Wickham'
 inputs:
   github_token:
-    description: 'The github token, `${{ secrets.GITHUB_TOKEN }}`'
+    description: 'The github token'
     required: true
 runs:
   using: 'node12'
