--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint src/**/*.ts",
-    "pack": "ncc build",
-    "all": "npm run build && npm run format && npm run lint && npm run pack"
+    "test": "jest",
+    "all": "npm run build && npm run format && npm run lint && npm run test"
   },
   "repository": {
     "type": "git",
@@ -23,16 +23,21 @@
   "author": "Jack Wickham",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.4",
-    "@actions/github": "^4.0.0"
+    "probot": "^11.1.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.21",
+    "@types/nock": "^11.1.0",
     "@types/node": "^14.0.23",
     "@typescript-eslint/parser": "^3.6.0",
     "@zeit/ncc": "^0.20.5",
     "eslint": "^5.16.0",
     "eslint-plugin-github": "^4.1.0",
+    "jest": "^26.6.3",
+    "jest-circus": "^26.6.3",
+    "nock": "^13.0.11",
     "prettier": "^1.19.1",
+    "ts-jest": "^26.5.4",
     "typescript": "^3.9.7"
   }
 }
