--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "esModuleInterop": true,                   /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
     "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
+    "resolveJsonModule": true,
   },
   "exclude": ["node_modules", "**/*.test.ts"]
 }
