--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "prettier": "^1.19.1",
     "ts-jest": "^26.5.4",
     "typescript": "^3.9.7"
+  },
+  "engines": {
+    "node": ">= 12.0.0"
   }
 }
