Update app manifest

--- a/app.yml
+++ b/app.yml
@@ -70,7 +70,7 @@ default_permissions:
 
   # Issues and related comments, assignees, labels, and milestones.
   # https://developer.github.com/v3/apps/permissions/#permission-on-issues
-  issues: write
+  # issues: write
 
   # Search repositories, list collaborators, and access repository metadata.
   # https://developer.github.com/v3/apps/permissions/#metadata-permissions
@@ -98,7 +98,7 @@ default_permissions:
 
   # Commit statuses.
   # https://developer.github.com/v3/apps/permissions/#permission-on-statuses
-  # statuses: read
+  statuses: read
 
   # Organization members and teams.
   # https://developer.github.com/v3/apps/permissions/#permission-on-members
@@ -132,7 +132,7 @@ name: Merge Dependabot
 url: https://github.com/jackwickham/merge-dependabot
 
 # A description of the GitHub App.
-description: Automatically add `@dependabot squash and merge` to dependabot PRs
+description: Automatically merge dependabot PRs when they have checks that are all passing
 
 # Set to true when your GitHub App is available to the public or false when it is only accessible to the owner of the app.
 # Default: true
