--- a/app.yml
+++ b/app.yml
@@ -14,7 +14,7 @@
 # Uncomment the event names below to enable them.
 default_events:
 # - check_run
-# - check_suite
+- check_suite
 # - commit_comment
 # - create
 # - delete
@@ -35,7 +35,7 @@ default_events:
 # - project_card
 # - project_column
 # - public
-  - pull_request
+# - pull_request
 # - pull_request_review
 # - pull_request_review_comment
 # - push
@@ -58,7 +58,7 @@ default_permissions:
 
   # Checks on code.
   # https://developer.github.com/v3/apps/permissions/#permission-on-checks
-  # checks: read
+  checks: read
 
   # Repository contents, commits, branches, downloads, releases, and merges.
   # https://developer.github.com/v3/apps/permissions/#permission-on-contents
