Run dependabot daily

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,14 +3,12 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "friday"
+      interval: "daily"
       time: "19:00"
       timezone: "BST"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "friday"
+      interval: "daily"
       time: "19:00"
       timezone: "BST"
