--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,10 +5,10 @@ updates:
     schedule:
       interval: "daily"
       time: "19:00"
-      timezone: "BST"
+      timezone: "Europe/London"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "daily"
       time: "19:00"
-      timezone: "BST"
+      timezone: "Europe/London"
