--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,9 @@
     "plugins": ["@typescript-eslint"],
     "extends": [
       "eslint:recommended",
-      "plugin:@typescript-eslint/recommended"
+      "plugin:@typescript-eslint/recommended",
+      "plugin:jest/recommended",
+      "plugin:jest/style"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
