--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.24.0",
+    "eslint-plugin-jest": "^24.3.5",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "nock": "^13.0.11",
