--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,27 +1,21 @@
 name: "build-test"
-on: # rebuild any PRs and main branch changes
-  pull_request: {}
+on:
   create: {}
   push: {}
 
 jobs:
-  build: # make sure build/ci work properly
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.3.4
-    - run: |
+    - name: build-test
+      run: |
         npm install
         npm run all
     - name: Check that the working dir is clean
       run: output=$(git status --porcelain) && ([ -z "$output" ] || (echo 'Working directory is not clean - make sure you ran `npm run all` and committed the result'; echo $output; false))
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1.1.4
-      if: startsWith(github.ref, 'refs/tags/')
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Create deployment
+      uses: jackwickham/create-deployment-action@main
+      if: ${{ github.ref == 'refs/heads/main' }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: ${{ github.ref }}
-        draft: false
-        prerelease: false
+        token: ${{ github.token }}
