--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,9 @@ jobs:
     runs-on: ubuntu-latest
     # if: ${{ github.ref == 'refs/heads/main' }}
     needs: test
+    permissions:
+      packages: write
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v3
