--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,12 +15,7 @@ jobs:
           npm run all
       - name: Check that the working dir is clean
         run: output=$(git status --porcelain) && ([ -z "$output" ] || (echo 'Working directory is not clean - make sure you ran `npm run all` and committed the result'; echo $output; false))
-      - name: Create deployment
-        uses: jackwickham/create-deployment-action@main
-        if: ${{ github.ref == 'refs/heads/main' }}
-        with:
-          token: ${{ github.token }}
-  deploy:
+  docker-publish:
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' }}
     needs: test
