--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "typescript": "^4.7.4"
   },
   "engines": {
-    "node": ">= 12.0.0"
+    "node": ">= 14.0.0"
+  },
+  "overrides": {
+    "got": "^11.8.5 || >= 12.1.0"
   }
 }
