--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "description": "Github action that merges dependabot PRs automatically",
   "main": "lib/main.js",
+  "type": "module",
   "scripts": {
     "start": "node --async-stack-traces ./lib/index.js",
     "build": "tsc",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint src/**/*.ts",
-    "test": "jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "all": "npm run build && npm run format && npm run lint && npm run test"
   },
   "repository": {
@@ -24,21 +25,22 @@
   "author": "Jack Wickham",
   "license": "MIT",
   "dependencies": {
-    "probot": "^12.3.3"
+    "probot": "^14.2.4"
   },
   "devDependencies": {
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.41.0",
-    "@typescript-eslint/parser": ">=8.41.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-jest": "^29.0.1",
-    "jest": "^30.1.1",
-    "jest-circus": "^30.1.1",
-    "nock": "^14.0.10",
+    "@types/node": "^24.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": ">=8.47.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-jest": "^29.2.0",
+    "jest": "^30.2.0",
+    "jest-circus": "^30.2.0",
+    "nock": "^15.0.0",
     "prettier": "^3.6.2",
-    "ts-jest": "^29.4.1",
-    "typescript": "^5.9.2"
+    "ts-jest": "^29.4.5",
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": ">= 18.0.0"
